# devils_script

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/: README.md  basic.cpp  desc.cpp
include/devils_script/: basic_functions.h  common.h  container.h  context.h  prng.h  string-utils.hpp  system.h  template_functions.h  text.h  type_traits.h
src/: all_commands_macro.h  basic_functions.cpp  common.cpp  common.h  common_commands.cpp  common_commands.h  container.cpp  container.h  context.cpp  context.h  core.cpp  core.h  core_interface.cpp  core_interface.h  forward_list.h  header.h  interface.h  linear_rng.cpp  linear_rng.h  logic_commands.cpp  logic_commands.h  logic_commands_macro.h  memory_pool.h  numeric_commands_macro.h  numeric_functions.cpp  numeric_functions.h  object.cpp  object.h  prng.cpp  sol.h  system.cpp  system.h  templates.h  text.cpp  type_info.h  type_traits.h
tests/: basic.cpp  case1.cpp  case1_bench.cpp
